--- a/docs/penetration/4.Tryhackme_Part_004.md
+++ b/docs/penetration/4.Tryhackme_Part_004.md
@@ -2,14 +2,15 @@
 
 ## OSI 七层模型
 
-![](../public/4.Tryhackme_Part_004-1.png)
+
+![](assets/4.tryhackme_part_004/4.Tryhackme_Part_004-1.png)
 ## TCP/IP 协议
 
-![](../public/4.Tryhackme_Part_004-5.png)
+![](assets/4.tryhackme_part_004/4.Tryhackme_Part_004-5.png)
 ## PING 命令
-![](../public/4.Tryhackme_Part_004-6.png)
+![](assets/4.tryhackme_part_004/4.Tryhackme_Part_004-6.png)
 ## Traceroute 命令
-![](../public/4.Tryhackme_Part_004-7.png)
+![](assets/4.tryhackme_part_004/4.Tryhackme_Part_004-7.png)
 ## WHOIS
 
 查询域名工具，也可以在浏览器上搜索🔍`whois`网站进行查询。
