--- a/docs/Security_Engineer/linux_system_hardening/5.Software_and_service.md
+++ b/docs/Security_Engineer/linux_system_hardening/5.Software_and_service.md
@@ -1,4 +1,4 @@
-# 软件和服务
+# 5.软件和服务
 
 您在系统上安装的每一个软件也会增加潜在漏洞的数量。换句话说，安装额外的软件包和新服务会增加攻击者可以利用的漏洞，从而访问您的系统，并最终访问您网络上的其他系统。您可以遵循一些指导原则来帮助您减少攻击面。
 ## 禁用不必要服务
