--- a/docs/notes/Security_Engineer/linux_system_hardening/1.Linux_Security.md
+++ b/docs/notes/Security_Engineer/linux_system_hardening/1.Linux_Security.md
@@ -17,7 +17,7 @@ permalink: /Security_Engineer/z0i15r7f/
 
 我们可以考虑根据要保护的Linux系统添加GRUB密码。许多工具可以帮助实现这一点。其中一个工具是`grub2-mkpasswd-pbkdf2`，它会提示您输入两次密码并为您生成一个哈希值。根据Linux发行版（例如：[Fedora](https://docs.fedoraproject.org/en-US/fedora-coreos/grub-password/)和[Ubuntu](https://help.ubuntu.com/community/Grub2/Passwords)）的不同，结果哈希应该被添加到相应的配置文件中。此配置将防止未经授权的用户重置您的root密码。它将要求用户提供密码以通过GRUB访问高级boot配置，包括使用root访问权限登录。
 
-```bash
+```bash file:grub2-mkpasswd-pbkdf2
 root@AttackBox# grub2-mkpasswd-pbkdf2
 Enter password:
 Reenter password:
@@ -32,7 +32,20 @@ grub.pbkdf2.sha512.10000.534B77859C13DCF094E90B926E26C586F5DC9D00687853487C4BB15
 
 ### 回答以下问题
 
-![](assets/1.Physical_Security/file-20241022095213.png)
+```ad-details
+collapse: true
+title:可以使用什么命令为GRUB引导加载程序创建秘密？
+**答案：** `grub2-mkpasswd-pbkdf2`
+
+```
+
+```ad-details
+collapse: true
+title:`PBKDF2`代表什么
+**答案：**`Password-Based Key Derivation Function 2`
+```
+
+
 
 
 url: https://en.wikipedia.org/wiki/PBKDF2
@@ -59,16 +72,19 @@ Linux统一密钥设置（LUKS）是用于Linux系统的加密磁盘加密标准
 
 **安装**
 
-:::code-group
-```sh [debain]
+::: tabs
+@tab debain
+```sh file:debain
 apt install cryptsetup
 ```
 
-```sh [redhat]
+@tab redhat
+```sh file:redhat
 yum install cryptsetup-luks
 ```
 
-```sh [Fedora]
+@tab Fedora
+```sh file:Fedora
 dnf install cryptsetup-luks
 ```
 :::
@@ -86,20 +102,31 @@ dnf install cryptsetup-luks
 
 ### 回答以下问题
 
-![](assets/1.Physical_Security/file-20241022095306.png)
+```ad-details
+collapse: true
+title: LUKS代表什么？
+**答案：** `Linux Unified Key Setup`
+```
+
+```ad-details
+collapse: true
+title: 我们无法将外部存储附加到VM,因此我们创建了一个`/home/tryhackme/secretvault.img`文件。它使用秘密`2N9EdZYNkszEE3Ad`进行加密。要访问它，您需要使用`cryptestup`打开它，然后将其挂载到空目录，例如`myvault`。秘密保险库中的标志是什么？
+**答案：**`THM{LUKS_not_LUX}` 
+```
+
+
 #### 题目二过程
 
 **打开并挂载加密磁盘**
 
-```bash
+```bash file:cryptestup
 sudo cryptsetup luksOpen secretvault.img EDCdrive
 sudo mount /dev/mapper/EDCdrive myvault/
 ```
 
 **查看磁盘挂载情况**
-```bash
+```bash file:lsblk
 lsblk
-
 
 NAME       MAJ:MIN RM   SIZE RO TYPE  MOUNTPOINT
 loop0        7:0    0  24.4M  1 loop  /snap/amazon-ssm-agent/6312
@@ -119,13 +146,13 @@ xvdh       202:112  0     1G  0 disk
 
 **获取flag**
 
-```sh
+```sh file:ls
 ls
 
 lost+found  task3_flag.txt
 ```
 
-```sh
+```sh file:task3_flag.txt
 cat task3_flag.txt
 
 THM{LUKS_not_LUX}
