--- a/docs/notes/Security_Engineer/linux_system_hardening/3.Remote_Access.md
+++ b/docs/notes/Security_Engineer/linux_system_hardening/3.Remote_Access.md
@@ -33,7 +33,7 @@ permalink: /Security_Engineer/3dj5i7hz/
 ### 禁用root远程
 上述准则背后的原因是，您不希望对手能够攻击 `root` 帐户。此外，即使它是一个非 root 帐户，如果密码存在弱点，您也不希望攻击者获得访问权限。
 OpenSSH 服务器的配置可以通过 `sshd_config` 文件，通常位于 `/etc/ssh/sshd_config`。您可以通过添加以下行来禁用 root 登录：
-```bash [sshd_config]
+```bash file:sshd_config
 PermitRootLogin no
 ```
 
@@ -44,20 +44,20 @@ PermitRootLogin no
 
  **创建SSH秘钥对**
 
-```bash
+```bash file:ssh-keygen
 ssh-keygen -t rsa
 ```
 
 **将公钥上传到服务器**
 
-```bash
+```bash file:ssh-copy-id
 ssh-copy-id username@server
 ```
 
 
 **SSH配置**
 
-```bash [sshd_config]
+```bash file:sshd_config
 PubkeyAuthentication yes # 启用公钥身份验证
 
 PasswordAthentication no # 禁用密码身份验证
@@ -65,9 +65,13 @@ PasswordAthentication no # 禁用密码身份验证
 
 ### 回答以下问题
 
-![](assets/3.remote_access/file-20241022094816.png)
+```ad-details
+collapse: true
+title: 什么标志隐藏在`sshd_config`文件？
+**答案：**`THM{secure_SEA_shell}`
+```
 
-```bash
+```bash file:sshd_config
 sudo cat /etc/ssh/sshd_config |grep 'THM'
 
 # THM{secure_SEA_shell}
