--- a/docs/notes/Security_Engineer/linux_system_hardening/4.Securing_User_accounts.md
+++ b/docs/notes/Security_Engineer/linux_system_hardening/4.Securing_User_accounts.md
@@ -12,17 +12,19 @@ permalink: /Security_Engineer/qvfmmg6o/
 `sudo`命令的做用是使普通用户可以临时以`root`权限去执行命令，前提是将该普通用户添加到 `sudoers`中。
 
 我们可以通过以下方式将用户添加到`sudoers`组，某些发行版（如Debian和Ubuntu将`sudoers` 组称为`sudo`），其他发行版（例如：RedHat和Fedora将sudoers 组称为`wheel`）：
-::: code-group
 
-```bash [Debain]
+::: tabs
+@tab Debain
+```bash file:Debain
 usermod -aG sudo username
 ```
-
-```bash [RedHat]
+@tab RedHat
+```bash file:RedHat
 usermod -aG whell username
 ```
-
 :::
+
+
 >[!NOTE]
 >- `usermod` : 修改用户账户
 >- `-aG` : 附加到组
@@ -35,8 +37,6 @@ usermod -aG whell username
 创建用户管理的账户，并将其添加到`sudo`/ `wheel` 组后，您可以考虑禁用`root`账户。您可以通过修改 `/etc/passwd` 中 `root`用户默认`shell` 实现：
 
 将 `root:x:0:0:root:/root:/bin/bash`  这一行中的 `/bin/bash` 改为  `/sbin/nologin`
-
-
 
 ## 强密码策略
 
@@ -54,7 +54,7 @@ usermod -aG whell username
 
 下面是一个例子：
 
-```sh
+```sh file:pwquality.conf
 sudo cat /etc/security/pwquality.conf
 difok=5
 minlen=10
@@ -72,9 +72,31 @@ retry=2
 
 ## 回答下面问题
 
+```ad-details
+collapse: true
+title: 禁用帐户的一种方法是编辑`passwd`件并更改帐户的shell。shell的建议值是多少？
+**答案：** `/sbin/nologin`
+```
 
-![](assets/4.securing_user_accounts/file-20241022172938.png)
+```ad-details
+collapse: true
+title: RedHat和Fedora系统sudoers组的名称是什么？
+**答案：** `wheel`
+```
+
+```ad-details
+collapse: true
+title: Debian和Ubuntu系统上的sudoers组的名称是什么？
+**答案：** `wheel`
+```
+
+```ad-details
+collapse: true
+title: 除了`tryhackme`和`ubuntu`，属于sudoers组的用户名是什么？
+**答案：** `wheel`
+```
+
 **最后一题解题过程如下：**
 - ssh 远程链接靶机
-- 查看/etc/group文件
+- 查看`/etc/group`文件
 	![](assets/4.securing_user_accounts/file-20241022172824.png)
