--- a/docs/notes/Security_Engineer/linux_system_hardening/6.Update_Policies.md
+++ b/docs/notes/Security_Engineer/linux_system_hardening/6.Update_Policies.md
@@ -51,8 +51,45 @@ Rdhat 企业版 Linux 8和9分三个阶段提供12年的支持：
 
 ## 回答下面问题
 
-![](assets/6.update_policies/file-20241022180056.png)
+```ad-details
+collapse: true
+title: 您会使用什么命令更新旧的Red Hat系统？
+**答案：** `yum update`
+```
 
-![](assets/6.update_policies/file-20241022180127.png)
-![](assets/6.update_policies/file-20241022180927.png)
+```ad-details
+collapse: true
+title: 您会使用什么命令来更新现代的Fedora系统？
+**答案：** `dnf update`
+```
+
+```ad-details
+collapse: true
+title: 更新`Debian`系统需要哪两个命令？（用`&&`连接这两个命令。）
+**答案：** `apt update && apt uppdate`
+```
+
+```ad-details
+collapse: true
+title: 您会使用什么命令来更新现代的Fedora系统？
+**答案：** `dnf update`
+```
+
+```ad-details
+collapse: true
+title: `yum`代表什么？
+**答案：** `Yellowdog Updater, Modified`
+```
+
+```ad-details
+collapse: true
+title: `dnf`代表什么？
+**答案：** `Dandified YUM`
+```
+
+```ad-details
+collapse: true
+title: `sources.list`文件中隐藏了什么标志？
+**答案：** `THM{not_Advanced_Persistent_Threat}`
+```
 
