--- a/docs/notes/penetration/1.tryhackme/3.Linux_002.md
+++ b/docs/notes/penetration/1.tryhackme/3.Linux_002.md
@@ -5,7 +5,7 @@ permalink: /penetration/mzykuncj/
 ---
 ## 任务_1: ssh 登陆
 
-```bash
+```bash file:ssh
 ssh tryhackme@10.10.224.147
 ```
 
@@ -37,20 +37,20 @@ ssh tryhackme@10.10.224.147
 
 Man 命令默认显示`Section 1` 既：普通用户命令，命令使用格式如下：
 
-```shell
+```shell file:man
 man <option>
 ```
 
 Man手册可以通过`-k` 参数指定关键词，搜索所有包含关键词的`Section`内容。同时可以通过正则表达式过滤搜索，准确查找令详情。举例：
 
 - 查看/etc/passwd 的文件格式：
-```Bash
+```Bash file:man
 man -k "^passwd" #or man -k 'passwd'
 ```
 
 - 在上述命令的结果中可以看到 passwd 相关的man手册，其中一个是 passwd(5),这就是我们要的选项,可以进一步查看详情：
 
-```Bash
+```Bash file:man
 man 5 passwd
 ```
 
@@ -58,7 +58,7 @@ man 5 passwd
 
 - **man手册查看openssl passwd的使用方式**
 
-```Bash
+```Bash file:示例
 man -k "passwd"
 man lssl "passwd"
 openssl passwd -1 asd # openssl 生成密钥，并自动加盐
@@ -67,7 +67,7 @@ openssl passwd -1 asd # openssl 生成密钥，并自动加盐
 
 - **使用man 手册查询scp 命令复制整个目录的参数**
 
-```shell
+```shell file:示例
 man scp |grep 'entire'
 ```
 
@@ -87,7 +87,7 @@ man scp |grep 'entire'
 ### 文件权限
 
 - 显示文件权限
-```bash
+```bash title:示例
 ls -lh  # or `ls -ll`  or `ls -l`
 ```
 
@@ -99,7 +99,7 @@ ls -lh  # or `ls -ll`  or `ls -l`
 | w    | 2    |
 | x    | 1    |
 - 修改文件权限
-```bash
+```bash file:chmod
 chmod [option] [file_name]
  ```
 
@@ -124,13 +124,13 @@ chmod [option] [file_name]
 
 设置文件 a.conf 与 b.xml 权限为拥有者与其所属同一个群组 可读写，其它组可读不可写
 
-```bash
+```bash title:chmod
 chmod a+r,ug+w,o-w a.conf b.xml
 ```
 
 ### 切换用户
 
-```bash
+```bash file:su
 su -l [UserName]  # -l 或 --login  可以省略
 				  # 当[UserName]为空，默认切换到 root 用户
 ```
@@ -141,7 +141,7 @@ su -l [UserName]  # -l 或 --login  可以省略
   etc文件夹（etcetera的缩写）是存储操作系统使用的系统文件的常见位置。
 “**passwd**“和“**shadow**“文件 是 etc 中的重要文件，他们保存了系统每个用户的用户名和密码（sha512加密）。
 
-```bash
+```bash file:'/etc'
 tryhackme@linux2:/etc$ ls
 shadow passwd sudoers sudoers.d
 ```
@@ -150,7 +150,7 @@ shadow passwd sudoers sudoers.d
 “/var”目录（“var”是变量数据的缩写）是Linux安装中的主要根文件夹之一。此文件夹存储系统上运行的服务或应用程序经常访问或写入的数据。例如，来自正在运行的服务和应用程序的日志文件被写入这里（**/var/log**），或者其他不一定与特定用户相关联的数据（即，数据库等）。、
 
 
-```bash
+```bash file:'/var'
 tryhackme@linux2:/var$ ls
 backups log opt tmp
 ```
@@ -159,7 +159,7 @@ backups log opt tmp
 /**root**：
 **/root**文件夹实际上是“root”系统用户的主目录。这个文件夹没有什么其他的东西，只是理解这是“root”用户的主目录。但是逻辑默认root 用户是将其数据存储在“`/home/root`”.
 
-```bash
+```bash file:'/root'
 root@linux2:~# ls
 myfile myfolder passwords.xlsx`
 ```
@@ -168,7 +168,7 @@ myfile myfolder passwords.xlsx`
 /tmp是“临时“的缩写，它是volatile目录，用于存储只需要访问一次或两次的数据。与计算机上的内存类似，一旦计算机重新启动，此文件夹中的内容将被清除。
 **也是攻击者存放脚本的好地方**
 
-```bash
+```bash file:'/tmp'
 root@linux2:/tmp# ls
 todelete trash.txt rubbish.bin
 ```
