--- a/docs/notes/penetration/1.tryhackme/5.Network_Introductory.md
+++ b/docs/notes/penetration/1.tryhackme/5.Network_Introductory.md
@@ -12,9 +12,47 @@ permalink: /penetration/vqoabpdm/
 
 ![](assets/5.network_introductory/file-20241116234408.png)
 ## PING 命令
-![](assets/5.network_introductory/file-20241116234419.png)
+
+```ad-details
+collapse: true
+title: 什么参数可以让你改变发送`ping`请求的时间间隔？
+**答案：** `-i`
+```
+
+```ad-details
+collapse: true
+title: 哪种交换机允许您将请求限制为IPv4？
+**答案：** `-4`
+```
+
+```ad-details
+collapse: true
+title:哪个参数会提供更详细的输出？ 
+**答案：** `-v`
+```
+
 ## Traceroute 命令
-![](assets/5.network_introductory/file-20241116234428.png)
+
+```ad-details
+collapse: true
+title: 使用Traceroute时，您将使用哪个参数指定接口？
+**答案：** `-i`
+```
+
+
+```ad-details
+collapse: true
+title: 如果您想在跟踪路由时使用TCP SYN请求，您会使用哪个参数？
+**答案：** `-T`
+```
+
+
+```ad-details
+collapse: true
+title: 默认情况下，traceroute将在**TCP/IP**模型的哪一层上运行（Windows）？
+**答案：** `Internet`
+```
+
 ## WHOIS
 
 查询域名工具，也可以在浏览器上搜索🔍`whois`网站进行查询。
@@ -28,16 +66,15 @@ permalink: /penetration/vqoabpdm/
 
 Dig允许我们手动查询我们选择的递归DNS服务器，以获取有关域的信息：
 
-```bash
+```bash file:dig
 dig <doman-name> @<DNS-server-IP>
 ```
 
 **示例:**
 
-  ```shell
+  ```shell file:dig
 dig www.baidu.com @223.5.5.5
 ```
-
 
 ## 总结
 
