--- a/docs/notes/work/技战法-未备案资产网络安全事件患排查分析处置技战法_1.md
+++ b/docs/notes/work/技战法-未备案资产网络安全事件患排查分析处置技战法_1.md
@@ -1,3 +1,8 @@
+---
+title: 技战法-未备案资产网络安全事件患排查分析处置技战法_1
+createTime: 2024/12/24 09:54:14
+permalink: /notes/work/技战法-未备案资产网络安全事件患排查分析处置技战法_1/
+---
 ## 一、背景说明
 
 在企业网络安全管理过程中，网络资产管理至关重要。从以往的安全事件及护网期间被攻破的案例来看，未纳入管理范围的资产往往成为攻击者的主要突破口，占比较高。
