--- a/docs/notes/GuideNote/Linux_Daily/2.ArchLinuxConf.md
+++ b/docs/notes/GuideNote/Linux_Daily/2.ArchLinuxConf.md
@@ -1,8 +1,9 @@
 ---
-title: ArchLinux
-createTime: 2025/01/17 17:41:56
-permalink: /GuideNote/2ev6x30b/
+title: ArchLinux配置
+createTime: 2025/04/07 16:33:51
+permalink: /GuideNote/Linux_Daily/s81bl4wk/
 ---
+
 系统版本：`EndeavourOS`
 
 窗口管理器：`bspwm`
@@ -71,8 +72,7 @@ systemctl enable v2raya
 ### 注册&重置账户
 v2rayA的UI是以网页的形式呈现的，所以我们打开浏览器，访问v2rayA的地址[http://localhost:2017/](http://localhost:2017/)
 
-![](assets/archlinuxconf/file-20250117181149.png)
-
+![](assets/2.archlinuxconf/file-20250117181149.png)
 
 首次打开需要创建一个管理员账号，如果遗忘，使用下面的命令重置。
 
@@ -83,21 +83,15 @@ sudo v2raya --reset-password
 ### 创建节点
 
 以创建或导入的方式导入节点，导入支持节点链接、订阅链接、扫描二维码和批量导入等方式。
-
-![](assets/archlinuxconf/file-20250117181207.png)
-
+![](assets/2.archlinuxconf/file-20250117181207.png)
 ### 设置
 
 点击右上角设置按钮，按官方推荐进行设置。
-
-![](assets/archlinuxconf/file-20250117181855.png)
-
+![](assets/2.archlinuxconf/file-20250117181855.png)
 ### 启用
 
 选中导入的节点，然后选在左上角选择就绪，开启代理。
-
-![](assets/archlinuxconf/file-20250117182234.png)
-
+![](assets/2.archlinuxconf/file-20250117182234.png)
 ## zsh安装配置
 
 ### zsh 及插件安装
@@ -197,4 +191,3 @@ HOST 10.10.10.2
   IdentityFile ~/.ssh/id_ed25519_server1
 
 ```
-
