--- a/docs/notes/penetration/1.tryhackme/1.introduce.md
+++ b/docs/notes/penetration/1.tryhackme/1.introduce.md
@@ -6,7 +6,7 @@ permalink: /penetration/oqfm5023/
 [TryHackMe是一个在线网络安全学习平台平台，可以通过浏览器进行动手练习和实验。](https://tryhackme.com)
 
 类似于HackTheBox，在TryHackMe 提供在线的靶机，可以通过学习课程和打靶来回答问题，还能赚取积分。
-同时网站上提供了多个学习路径，可以选择适合自己的学习路径进行学习。我选择了**完整的初雪者模式**。
+同时网站上提供了多个学习路径，可以选择适合自己的学习路径进行学习。我选择了**完整的初学者模式**。
 
 ## 完整的初学者模式
 ![](https://assets.tryhackme.com/img/paths/introtocybersecurity.svg)
