--- a/docs/notes/GuideNote/Linux_Daily/2.ArchLinuxConf.md
+++ b/docs/notes/GuideNote/Linux_Daily/2.ArchLinuxConf.md
@@ -121,13 +121,108 @@ autoload -Uz compinit && compinit -u
 autoload -U +X bashcompinit && bashcompinit
 ```
 
-## Color Auto
+### Color Auto
 
 配置 `ls` 和`grep`命令打印内容按文件类型显示不同颜色。
 
 ```bash file:~/.zshrc
 alias ls='ls --color=auto'
 alias grep='grep --color=auto'
+```
+
+### zsh主题配置
+
+对`～/.zshrc`配置完成后,通过`source ～/.zshrc` 命令引用文件，之后`powerlevel10k.zsh-theme`主题会在用户目录自动创建一个配置文件`p10k.zsh`，用户可以按自己喜好配置主题样式。
+
+#### 获取可用颜色值
+
+```bash
+for code ({000..255}) print -P -- "$code: %F{$code}最左侧三位数字即颜色值Text Color%f"
+
+```
+
+#### 查找或下载 Nerd Fonts字体（图标）
+
+[https://www.nerdfonts.com/cheat-sheet](https://www.nerdfonts.com/cheat-sheet)
+
+#### 配置文件
+
+下面是`～/.p10k.zsh` 文件的部分配置内容
+
+```bash file:.p10k.zsh
+# 命令行分割线（两旁的转角线）#青色
+  # Connect left prompt lines with these symbols.
+  typeset -g POWERLEVEL9K_MULTILINE_FIRST_PROMPT_PREFIX='%039F╭─'
+  typeset -g POWERLEVEL9K_MULTILINE_NEWLINE_PROMPT_PREFIX='%039F├─'
+  typeset -g POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX='%039F╰─'
+  # Connect right prompt lines with these symbols.
+  typeset -g POWERLEVEL9K_MULTILINE_FIRST_PROMPT_SUFFIX='%039F─╮'
+  typeset -g POWERLEVEL9K_MULTILINE_NEWLINE_PROMPT_SUFFIX='%039F─┤'
+  typeset -g POWERLEVEL9K_MULTILINE_LAST_PROMPT_SUFFIX='%039F─╯'
+
+...
+    # The color of the filler.
+    # 命令行分割线颜色设置
+    typeset -g POWERLEVEL9K_MULTILINE_FIRST_PROMPT_GAP_FOREGROUND=39
+
+...
+  # OS identifier color.
+  
+  typeset -g POWERLEVEL9K_OS_ICON_FOREGROUND=31 #紫135, 值为空默认白色 ，橙色208
+  # Custom icon.
+  #typeset -g POWERLEVEL9K_OS_ICON_CONTENT_EXPANSION=$'\uF346' # arch
+  #typeset -g POWERLEVEL9K_OS_ICON_CONTENT_EXPANSION=$'\uF35D' # sway
+  typeset -g POWERLEVEL9K_OS_ICON_CONTENT_EXPANSION=$'\uF17C' # linux
+  #typeset -g POWERLEVEL9K_OS_ICON_CONTENT_EXPANSION=$'\uF355' # Bspwm
+
+...
+  
+  # Default prompt symbol.
+  typeset -g POWERLEVEL9K_PROMPT_CHAR_{OK,ERROR}_VIINS_CONTENT_EXPANSION='>>'
+  # Prompt symbol in command vi mode.
+  typeset -g POWERLEVEL9K_PROMPT_CHAR_{OK,ERROR}_VICMD_CONTENT_EXPANSION='<<'
+
+...
+
+  # Default current directory color.
+  # 默认目录颜色
+  typeset -g POWERLEVEL9K_DIR_FOREGROUND=208 #31
+  # If directory is too long, shorten some of its segments to the shortest possible unique
+  # prefix. The shortened directory can be tab-completed to the original.
+  typeset -g POWERLEVEL9K_SHORTEN_STRATEGY=truncate_to_unique
+  # Replace removed segment suffixes with this symbol.
+  typeset -g POWERLEVEL9K_SHORTEN_DELIMITER=
+  # Color of the shortened directory segments.
+  # 缩短的目录段颜色
+  typeset -g POWERLEVEL9K_DIR_SHORTENED_FOREGROUND=52
+  # Color of the anchor directory segments. Anchor segments are never shortened. The first
+  # segment is always an anchor.
+  # 锚点目录颜色（如根目录)
+  typeset -g POWERLEVEL9K_DIR_ANCHOR_FOREGROUND=208 #39
+  # Display anchor directory segments in boldi.
+  typeset -g POWERLEVEL9K_DIR_ANCHOR_BOLD=true
+...
+  # Current time color.
+  typeset -g POWERLEVEL9K_TIME_FOREGROUND=076
+  # Format for the current time: 09:51:02. See `man 3 strftime`.
+  #typeset -g POWERLEVEL9K_TIME_FORMAT='%D{%H:%M:%S}'
+  # If set to true, time will update when you hit enter. This way prompts for the past
+  # commands will contain the start times of their commands as opposed to the default
+  # behavior where they contain the end times of their preceding commands.
+  ## 默认值为false,表示每秒更新，开销大，可以修改：
+  #typeset -g POWERLEVEL9K_TIME_UPDATE_ON_COMMAND=false
+  typeset -g POWERLEVEL9K_TIME_UPDATE_INTERVAL=60  # 每分钟更新
+  typeset -g POWERLEVEL9K_TIME_FORMAT='%D{%H:%M}'  # 时间格式
+  # Custom icon.
+  # 图标颜色为橙色
+  #typeset -g POWERLEVEL9K_TIME_VISUAL_IDENTIFIER_EXPANSION=$'\uE641' 
+  typeset -g POWERLEVEL9K_TIME_VISUAL_IDENTIFIER_EXPANSION='🕒' 
+  #typeset -g POWERLEVEL9K_TIME_VISUAL_IDENTIFIER_COLOR=208
+  # 电量低于20时，时间为红色
+  typeset -g POWERLEVEL9K_TIME_LOW_BATTERY_FOREGROUND=196
+  typeset -g POWERLEVEL9K_TIME_LOW_BATTERY_THRESHOLD=20
+...
+
 ```
 
 ## nvm
