--- a/docs/notes/GuideNote/others/1.git.md
+++ b/docs/notes/GuideNote/others/1.git.md
@@ -3,7 +3,7 @@ title: git使用手记
 createTime: 2025/04/07 16:45:35
 permalink: /GuideNote/others/56udv8zc/
 ---
-# Obsidan  仓库地址
+## Obsidan  仓库地址
 
 ```vim
 url = git@gitlab.com:suxiuf/suxiuf.gitlab.io.git
@@ -11,7 +11,15 @@ url = git@gitcode.com:suxiuf/mynote.git
 url = git@gitea.com:suxiuf/my-obsidian.git
 ```
 
-# 强制将远程仓库与本地合并
+## 正常推送
+
+```git
+git add  . 
+git commit -m "描述"
+git push
+```
+
+## 强制将远程仓库与本地合并
 
 ```git
 git fetch --all
@@ -19,13 +27,13 @@ git reset --hard origin/master
 git pull
 ```
 
-# 强制推送
+## 强制推送
 
 ```git
 git push --force orgin master
 ```
 
-# 删除仓库文件
+## 删除仓库文件
 ```git
 git pull origin master       # 拉取远程文件
 tree                         #查看文件
